2013-04-22  Vladimir Makarov  <vmakarov@redhat.com>

	* lra-constraints.c (process_address): Try to put lo_sum into
	register.
	* config/rs6000/rs6000.c (legitimate_lo_sum_address_p): Remove
	lra_in_progress guard for addressing something bigger than word.

2013-04-18  Vladimir Makarov  <vmakarov@redhat.com>

	* lra-constraints.c (check_and_process_move): Move code for move
	cost check to simple_move_p.  Remove equiv_substitution.
	(simple_move_p): New function.
	(curr_insn_transform): Use the new function.  Move call of
	check_and_process_move after operand equiv substitution and
	address process.

2013-04-18  Diego Novillo  <dnovillo@google.com>

	* gimple.c (create_gimple_tmp): New.
	(get_expr_type): New.
	(build_assign): New.
	(build_type_cast): New.
	* gimple.h (enum ssa_mode): Define.
	(gimple_seq_set_location): New.
	* asan.c (build_check_stmt): Change some gimple_build_* calls
        to use build_assign and build_type_cast.

2013-04-18  Richard Biener  <rguenther@suse.de>

	* tree-vect-data-refs.c (vect_analyze_group_access): Properly
	handle negative step.  Remove redundant checks.
	(vect_create_data_ref_ptr): Avoid ICEs with non-constant steps.
	* tree-vect-stmts.c (vectorizable_load): Instead of asserting
	for negative step and grouped loads fail to vectorize.

2013-04-18  Steven Bosscher  <steven@gcc.gnu.org>

	* emit-rtl.c (reset_insn_used_flags): New function.
	(reset_all_used_flags): Use it.
	(verify_insn_sharing): New function.
	(verify_rtl_sharing): Fix verification for SEQUENCEs.

2013-04-18  Jakub Jelinek  <jakub@redhat.com>

	PR tree-optimization/56984
	* tree-vrp.c (register_edge_assert_for_2): For (x >> M) < N
	and (x >> M) >= N don't register any assertion if N << M is the
	minimum value.

2013-04-18  Steven Bosscher  <steven@gcc.gnu.org>

	* lower-subreg.c (resolve_simple_move): If called self-recursive,
	do not delete_insn insns that have not yet been emitted, only
	unlink them with remove_insn.