@@ -1,3 +1,8 @@
+2013-04-25  Vladimir Makarov  <vmakarov@redhat.com>
+
+	* config/rs6000/rs6000.c (rs6000_emit_move): Use assigned hard reg
+	for LRA SD moves.
+
 2013-04-22  Vladimir Makarov  <vmakarov@redhat.com>
 
 	* lra-constraints.c (process_address): Try to put lo_sum into
